# pdf-focus-analyzer

./: .gitignore  LICENSE  README.md  analyze_pdf.py  pyproject.toml  requirements.txt
infra/: __init__.py  chat_factory.py  config.py  llm_json.py  models.py  tokens.py
input/: focus_example.md
pipeline/: __init__.py  chunking.py  focus_parser.py  map_extract.py  orchestrator.py  pdf_extract.py  quality_check.py  reduce_summarize.py  retrieval.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_llm_json.py  test_models.py  test_orchestrator.py
